--- a/es-dms-site/pom.xml
+++ b/es-dms-site/pom.xml
@@ -176,6 +176,13 @@
 			<artifactId>slf4j-log4j12</artifactId>
 			<version>1.6.4</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.el</groupId>
+			<artifactId>javax.el-api</artifactId>
+			<version>2.2.4</version>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<finalName>es-dms-site</finalName>
@@ -196,7 +203,7 @@
 			<!-- Configure the clean plugin in order to delete generated directories -->
 			<plugin>
 				<artifactId>maven-clean-plugin</artifactId>
-				<version>2.5</version>
+				<!-- <version>2.5</version> -->
 				<configuration>
 					<filesets>
 						<fileset>
@@ -212,20 +219,9 @@
 						<fileset>
 							<directory>yo/.tmp</directory>
 						</fileset>
-						<!--
-						<fileset>
-							<directory>yo/app/bower_components</directory>
-							<excludes>
-								<exclude>**/*</exclude>
-							</excludes>
-						</fileset>
-						<fileset>
-							<directory>yo/node_modules</directory>
-							<excludes>
-								<exclude>**/*</exclude>
-							</excludes>
-						</fileset>
-					-->
+						<!-- <fileset> <directory>yo/app/bower_components</directory> <excludes> 
+							<exclude>**/*</exclude> </excludes> </fileset> <fileset> <directory>yo/node_modules</directory> 
+							<excludes> <exclude>**/*</exclude> </excludes> </fileset> -->
 					</filesets>
 				</configuration>
 			</plugin>
@@ -244,15 +240,11 @@
 						<goals>
 							<goal>run-war-only</goal>
 						</goals>
-							<configuration>
-								<port>8080</port>
-								<!--
-								<httpsPort>8443</httpsPort>
-								<keystoreFile>${basedir}/.keystore</keystoreFile>
-								<keystorePass>secret</keystorePass>
-								<contextFile>${basedir}/src/test/resources/tomcat-context.xml</contextFile>
-								-->
-							</configuration>
+						<configuration>
+							<port>8080</port>
+							<!-- <httpsPort>8443</httpsPort> <keystoreFile>${basedir}/.keystore</keystoreFile> 
+								<keystorePass>secret</keystorePass> <contextFile>${basedir}/src/test/resources/tomcat-context.xml</contextFile> -->
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
