--- a/es-dms-site/yo/package.json
+++ b/es-dms-site/yo/package.json
@@ -18,7 +18,7 @@
     "grunt-contrib-watch": "~0.4.0",
     "grunt-usemin": "~0.1.11",
     "grunt-rev": "~0.1.0",
-    "grunt-karma": "~0.4.5",
+    "grunt-karma": "~0.6.2",
     "grunt-open": "~0.2.0",
     "grunt-concurrent": "~0.3.0",
     "matchdep": "~0.1.2",
@@ -30,7 +30,19 @@
     "grunt-env": "~0.4.0",
     "bower": "~0.10.0",
     "yo": "~1.0.0-rc.1.1",
-    "connect-modrewrite": "~0.5.11"
+    "connect-modrewrite": "~0.5.11",
+    "karma-chrome-launcher": "~0.1.0",
+    "karma-firefox-launcher": "~0.1.0",
+    "karma-phantomjs-launcher": "~0.1.0",
+    "karma-script-launcher": "~0.1.0",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-jasmine": "~0.1.3",
+    "karma-coffee-preprocessor": "~0.1.0",
+    "requirejs": "~2.1.9",
+    "karma-requirejs": "~0.2.0",
+    "karma": "~0.10.5",
+    "js-beautify": "~1.3.4",
+    "grunt-html-build": "~0.3.1"
   },
   "engines": {
     "node": ">=0.8.0"
